update user-model and user-validates
