# swagger.json
@@ -5,12 +5,78 @@
     "title": "GooseTrack",
     "description": "This is a sample documentation for the GooseTrack application based on OpenApi 3.0.1. This documentation provides access to the core functionalities of our service. The API enables you to retrieve and send data, manage resources, and interact with the application. We continuously work on improving it, updating, and expanding its functionality. Please review our documentation to learn how to get started with our API and seamlessly integrate it into your projects."
   },
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
   "servers": [{ "url": "http://localhost:4000" }],
   "tags": [
     { "name": "Auth", "description": "Authorization endpoints" },
+    { "name": "Users", "description": "Users endpoints" },
     { "name": "Reviews", "description": "Reviews endpoints" },
     { "name": "Tasks", "description": "Tasks endpoints" }
-  ]
+  ],
+  "paths": {
+    "/auth/register": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "Register a new user",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#components/schemas/RegistrationRequest"
+              }
+            }
+          }
+        }
+      },
+      "response": {
+        "201": {
+          "description": "Successful operation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#components/schemas/RegistrationResponse"
+              }
+            }
+          }
+        },
+        "400": {
+          "description": "Bad request (invalid request body)",
+          "content": {}
+        },
+        "409": {
+          "description": "Provided email already exists",
+          "content": {}
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "RegistrationRequest": {
+        "type": "object",
+        "required": ["email", "password"],
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "User's email",
+            "format": "email",
+            "example": "user.email.100@mail.com",
+            "pattern": "^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$"
+          },
+          "password": {
+            "type": "string",
+            "description": "User's password",
+            "example": "user_password123"
+          },
+          "avatarURL": {
+            "type": "string",
+            "format": "binary",
+            "description": "User's avatar"
+          }
+        }
+      },
+      "RegistrationResponse": {
+        "type": "object"
+      }
+    }
+  }
 }
